--- a/public/mybusinessnewwebsite/css/english-style.css
+++ b/public/mybusinessnewwebsite/css/english-style.css
@@ -4297,7 +4297,21 @@ display: inline-block;
   font-size: 12px;
 }
 
-.has-error .select2-selection {
-    border: 1px solid #a94442;
-    border-radius: 4px;
+ ul.myErrorClass, input.myErrorClass, textarea.myErrorClass, select.myErrorClass {
+    border-width: 1px !important;
+    border-style: solid !important;
+    border-color: #cc0000 !important;
+    background-color: #f3d8d8 !important;
+    background-image: url(http://goo.gl/GXVcmC) !important;
+    background-position: 50% 50% !important;
+    background-repeat: repeat !important;
+}
+ul.myErrorClass input {
+    color: #666 !important;
+}
+label.myErrorClass {
+    color: red;
+    font-size: 11px;
+    /*    font-style: italic;*/
+    display: block;
 }
